--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Lab1</string>
     <string name="title_home">Student</string>
     <string name="title_dashboard">Graph</string>
+    <string name="title_movies">Movies</string>
 </resources>
